Fixed winner reveal on mobile screens after parallax

--- a/src/components/landing-page/minted-section/index.scss
+++ b/src/components/landing-page/minted-section/index.scss
@@ -126,7 +126,6 @@
 
 .winner-reveal {
   position: absolute;
-  top: -13%;
   z-index: 1;
   background: url(../../../assets/images/paper-bg.png);
   background-repeat: no-repeat;
@@ -134,25 +133,35 @@
   // height: 100%;
   width: 100%;
   @media (max-width: 2800px) {
-    top: -10%;
+    top: 105%;
+    & .solved-heading {
+      font-size: $font-24;
+      line-height: $size-28;
+    }
   }
+
   @media (max-width: 2000px) {
-    top: -6%;
+    top: 70%;
+  }
+  @media (max-width: 1600px) {
+    top: 125%;
+  }
+  @media (max-width: $breakpoint-lg) {
+    top: 29% !important;
   }
   // for tablets
   @media screen and (max-width: $breakpoint-md) {
     max-width: 80%;
+    top: 45% !important;
   }
   // for mobiles screen
   @media screen and (max-width: $breakpoint-sm) {
     max-width: 100%;
     background-size: contain;
+    top: 40% !important;
   }
   @media screen and (max-width: $breakpoint-xs) {
-    top: -12%;
-  }
-  @media screen and (max-width: 280px) {
-    top: -15%;
+    top: 30% !important;
   }
 }
 
@@ -231,6 +240,7 @@
     background: $charcoal;
     color: $white;
   }
+
   @media screen and (max-width: 2800px) {
     font-size: 1rem !important;
     line-height: 1rem !important;
@@ -276,6 +286,12 @@
       display: none;
       heoght: auto;
     }
+  }
+}
+
+@media screen and (max-width: $breakpoint-md) {
+  .winner-mobile {
+    margin-bottom: 50em;
   }
 }
 /*# sourceMappingURL=index.css.map */
